# phoenice-omniforge-ml

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKLOG.md  BACKLOG_V1  LICENSE  Makefile  README.md  TECH_STACK.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_eda_cleaning_columns.py  0003_add_sampling_feature_selection.py  0004_extend_tasktype_enum.py  0005_add_training_results.py  0006_add_evaluation_results.py  0007_add_projects_audit_logs.py  0008_add_prediction_logs.py  0009_add_pipeline_schedules.py
client/: .env.development  .gitignore  package-lock.json  package.json  vite-mock-api.ts  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  router.tsx
client/src/api/: types.ts
client/src/hooks/: useDataset.ts  usePipelineStatus.ts
client/src/stores/: pipeline.ts
client/src/theme/: index.ts
data/: generate_dataset.py
docker/: Dockerfile.api  Dockerfile.worker
docs/: TEST_DATASET_PLAN.md
scripts/: run-tests.ps1  start-dev.ps1
src/omniforge/: __init__.py
src/omniforge/api/: deps.py  main.py  scheduler.py
src/omniforge/core/: config.py  logging.py
src/omniforge/db/: session.py
src/omniforge/storage/: minio.py
src/omniforge/tasks/: celery_app.py  pii.py  profile.py
src/omniforge/utils/: dataframe_io.py
tests/: conftest.py  test_api_contract.py  test_pii.py  test_profile.py  test_projects.py  test_upload.py
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: api-routes.spec.ts  (+1 more)
(+120 files in other folders)
