[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniforge"
version = "0.1.0"
description = "Phoenice OmniForge ML – AutoML Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    # Phase A
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Phase 1
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "ydata-profiling>=4.9.0",
    # Sync DB driver for Celery
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/omniforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 15

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
